force-app/main/default/objects/Traveler__c/Traveler__c.object-meta.xml
<CustomObject>
    <description>Stores individual passenger details (name, passport, DOB, nationality) for each traveler in a booking — required for flight ticketing and visa processing. One booking can have multiple traveler records.</description>
    <label>Traveler</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travelers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>