force-app/main/default/objects/Traveler__c/fields/Traveler_Type__c.field-meta.xml
<CustomField>
    <fullName>Traveler_Type__c</fullName>
    <label>Traveler Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Infant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>