force-app/main/default/objects/Traveler__c/validationRules/Passport_Expiry_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Expiry_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					NOT(
									ISBLANK(Passport_Expiry_Date__c)
					), 
					Passport_Expiry_Date__c &lt; TODAY()
	)</errorConditionFormula>
    <errorDisplayField>Passport_Expiry_Date__c</errorDisplayField>
    <errorMessage>Passport has already expired — update the passport details before saving.</errorMessage>
</ValidationRule>