force-app/main/default/objects/Traveler__c/listViews/Passports_Expiring_Soon.listView-meta.xml
<ListView>
    <fullName>Passports_Expiring_Soon</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Booking__c</field>
        <operation>equals</operation>
        <value>NEXT 180 DAYS</value>
    </filters>
    <label>Passports Expiring Soon</label>
</ListView>